projects/compiler/test/parser/traitdecl_error_field.out
Error at %FILE_NAME%:2:3
Unexpected token 'identifier':
  |    a: Int
       ^